--- a/android-codegen-demo/app/src/main/res/layout/activity_main.xml
+++ b/android-codegen-demo/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,6 @@
         android:id="@+id/sendButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Refresh" />
+        android:text="Send data" />
 
 </LinearLayout>
